--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -1,5 +1,5 @@
-user nginx;
-worker_processes  1;
+#user 1001;
+worker_processes 1;
 daemon off;
 
 # Default nginx image symlinks:
@@ -39,6 +39,23 @@ http {
     location / {
       root  /opt/www/public;
       autoindex on;
+    }
+
+    location /couchdb {
+      rewrite /couchdb/(.*) /$1 break;
+      proxy_pass http://{{COUCHDB_HOST}}:5984;
+      proxy_redirect off;
+      proxy_buffering off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /_session {
+      proxy_pass http://{{COUCHDB_HOST}}:5984/_session;
+      proxy_redirect off;
+      proxy_buffering off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /health {
